[IMP] events: generalized entity participation